:lipstick: Fix min-width of caret spacing in Tree

--- a/packages/client/src/index.scss
+++ b/packages/client/src/index.scss
@@ -14,3 +14,7 @@ body {
     flex-direction: row;
     box-sizing: border-box;
 }
+
+.bp3-tree-node-caret-none {
+    min-width: 8px;
+}
